@@ -1,15 +1,20 @@
 package com.project.internship_desk_booking_system.service;
 
 import com.project.internship_desk_booking_system.dto.FavouriteDesksDTO;
-import com.project.internship_desk_booking_system.entity.*;
-import com.project.internship_desk_booking_system.repository.*;
+import com.project.internship_desk_booking_system.entity.Desk;
+import com.project.internship_desk_booking_system.entity.FavouriteDesks;
+import com.project.internship_desk_booking_system.entity.User;
+import com.project.internship_desk_booking_system.error.ExceptionResponse;
+import com.project.internship_desk_booking_system.mapper.FavouriteDeskMapper;
+import com.project.internship_desk_booking_system.repository.DeskRepository;
+import com.project.internship_desk_booking_system.repository.FavouriteDesksRepository;
+import com.project.internship_desk_booking_system.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,18 +23,19 @@ public class FavouriteDesksService {
     private final FavouriteDesksRepository favouriteDesksRepository;
     private final DeskRepository deskRepository;
     private final UserRepository userRepository;
+    private final FavouriteDeskMapper favouriteDeskMapper;
 
     @Transactional
     public void addFavouriteDesk(String email, Long deskId) {
         User user = userRepository.findByEmailIgnoreCase(email)
-                .orElseThrow(() -> new IllegalArgumentException("User not found"));
+                .orElseThrow(() -> new ExceptionResponse(HttpStatus.NOT_FOUND, "USER_NOT_FOUND", "user not found"));
 
         if (favouriteDesksRepository.findByUserIdAndDeskId(user.getId(), deskId).isPresent()) {
             return;
         }
 
         Desk desk = deskRepository.findById(deskId)
-                .orElseThrow(() -> new IllegalArgumentException("Desk not found"));
+                .orElseThrow(() -> new ExceptionResponse(HttpStatus.NOT_FOUND, "DESK NOT_FOUND", "desk not found"));
 
         FavouriteDesks favourite = new FavouriteDesks(user, desk);
         favouriteDesksRepository.save(favourite);
@@ -39,43 +45,19 @@ public class FavouriteDesksService {
     @Transactional
     public void removeFavouriteDesk(String email, Long deskId) {
         User user = userRepository.findByEmailIgnoreCase(email)
-                .orElseThrow(() -> new IllegalArgumentException("User not found"));
+                .orElseThrow(() -> new ExceptionResponse(HttpStatus.NOT_FOUND, "USER_NOT_FOUND", "user not found"));
 
         favouriteDesksRepository.deleteByUserIdAndDeskId(user.getId(), deskId);
     }
 
-    public List<FavouriteDesksDTO> getFavouriteDesksDTO(String email) {
-        User user = userRepository.findByEmailIgnoreCase(email)
-                .orElseThrow(() -> new IllegalArgumentException("User not found"));
+    @Transactional(readOnly = true)
+    public List<FavouriteDesksDTO> getFavouriteDesks(String email) {
+        User user = userRepository.findByEmailIgnoreCase(email).orElseThrow(() -> new ExceptionResponse(HttpStatus.NOT_FOUND, "USER_NOT_FOUND", "user not found"));
 
-        List<FavouriteDesks> favourites = favouriteDesksRepository.findByUser(user);
-
-        return favourites.stream()
-                .map(fav -> new FavouriteDesksDTO(
-                        fav.getDesk().getId(),
-                        fav.getDesk().getDeskName(),
-                        fav.getDesk().getZone(),
-                        true))
-                .collect(Collectors.toList());
+        return favouriteDesksRepository.findByUser(user)
+                .stream()
+                .map(favouriteDeskMapper::toDto)
+                .toList();
     }
 
-    public List<FavouriteDesksDTO> getAllDesksWithFavourites(String email) {
-        User user = userRepository.findByEmailIgnoreCase(email)
-                .orElseThrow(() -> new IllegalArgumentException("User not found"));
-
-        List<Desk> allDesks = deskRepository.findAll();
-        List<FavouriteDesks> favourites = favouriteDesksRepository.findByUser(user);
-
-        Set<Long> favouriteDeskIds = favourites.stream()
-                .map(fav -> fav.getDesk().getId())
-                .collect(Collectors.toSet());
-
-        return allDesks.stream()
-                .map(desk -> new FavouriteDesksDTO(
-                        desk.getId(),
-                        desk.getDeskName(),
-                        desk.getZone(),
-                        favouriteDeskIds.contains(desk.getId())))
-                .collect(Collectors.toList());
-    }
 }
